--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Zajmujemy się naprawą oraz serwisem laptopów i komputerów w konkurencyjnych cenach.Przeprowadzamy przeglądy podzespołów i informujemy klientów o wykrytych uszkodzeniach i przybliżonej kwocie naprawy.">
-    <meta name="keywords" content="serwis, Częstochowa, komputery, format komputera, naprawa, instalacja, laptopy"
+    <meta name="keywords" content="serwis, Częstochowa, komputery, format komputera, naprawa, instalacja, laptopy">
     <link rel="stylesheet" href="style/style.css">
     <title>Serwis DotCom</title>
 </head>
