--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </article>
     </main>
     <footer>
-        <p>
-        Łukasz Biś, Jakub Kurzacz, Damian Kostek &copy 2023
+        <p class="stopa">
+        &copy 2023 - Łukasz Biś, Jakub Kurzacz, Damian Kostek
         </p>
     </footer>
 </body>
