--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Zajmujemy się naprawą oraz serwisem laptopów i komputerów w konkurencyjnych cenach.Przeprowadzamy przeglądy podzespołów i informujemy klientów o wykrytych uszkodzeniach i przybliżonej kwocie naprawy.">
     <meta name="keywords" content="serwis, Częstochowa, komputery, format komputera, naprawa, instalacja, laptopy">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
     <title>Serwis DotCom</title>
 </head>
