--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css" media="all">
     <title>Serwis DotCom</title>
 </head>
 <body>
 
     <header>
         <div class="banner">
-            <img src="zdj/banner.png" alt="banner">
+            <img src="zdj/banner1.avif" alt="banner">
         </div>
         <nav>
             <ul>
