--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             list-style-type: none;
         }
         html{
-            background-image:url("../zdj/tlo2.avif");
+            background-image:url("zdj/tlo2.avif");
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
