--- a/cennik.html
+++ b/cennik.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="preload" href="style/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="style/style.css"></noscript>
     
 
     <style>
@@ -17,7 +19,7 @@
             list-style-type: none;
         }
         html{
-            background-image:url("zdj/tlo2.avif");
+            background-image:url("../zdj/tlo2.avif");
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
